--- a/src/main/resources/templates/Resume.html
+++ b/src/main/resources/templates/Resume.html
@@ -169,7 +169,7 @@
                 <!-- Software developer Start  -->
                 <div class="mt-4">
                     <div class="flex flex-row justify-between">
-                        <p class="text-xs font-semibold text-gray-500">Software Developer</p>
+                        <p class="text-xs font-semibold text-gray-500">Spring Boot</p>
                         <p class="text-xs font-semibold text-gray-500">55%</p>
                     </div>
 
@@ -187,7 +187,7 @@
                 <!-- Software developer Start  -->
                 <div class="mt-4">
                     <div class="flex flex-row justify-between">
-                        <p class="text-xs font-semibold text-gray-500">Software Developer</p>
+                        <p class="text-xs font-semibold text-gray-500">Java</p>
                         <p class="text-xs font-semibold text-gray-500">65%</p>
                     </div>
 
@@ -205,7 +205,7 @@
                 <!-- Software developer Start  -->
                 <div class="mt-4">
                     <div class="flex flex-row justify-between">
-                        <p class="text-xs font-semibold text-gray-500">Software Developer</p>
+                        <p class="text-xs font-semibold text-gray-500">Tawilwind Css</p>
                         <p class="text-xs font-semibold text-gray-500">73%</p>
                     </div>
 
