--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng" xmlns:th="https://www.thymeleaf.org" th:replace="~{/normal/base::layout(~{::section})}">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" th:replace="~{/normal/base::layout(~{::section})}">
 
 <head>
     <meta charset='utf-8'>
@@ -15,13 +15,10 @@
 <body>
 
     <section>
-
         <!-- Contact Section Start -->
         <div class="Project-main px-10 pb-4">
-
-            <!-- Contact Heading Start  -->
+            <!-- Contact Heading Start -->
             <div class="Project_Head">
-
                 <div class="heading flex item-center">
                     <h1 class="text-2xl text-gray-900 font-semibold font-sans">Contact</h1>
                     <hr class="bg-pink-700 w-28 h-0.5 relative top-0.5 rounded-lg left-2">
@@ -30,86 +27,55 @@
             <!-- Contact Heading end -->
 
             <div class="projects bg-gray-100 rounded-lg mt-4">
-                <!-- ............ -->
-
                 <div class="py-8 px-8 font-sans leading-2">
+                    <h2 class="text-lg font-semibold text-gray-500">I'm Always Open To Discuss Product</h2>
+                    <h3 class="text-md font-bold text-gray-800 mt-1">Design Work or Partnerships</h3>
 
-                    <h1 class="text-lg font-semibold text-gray-500">I'm Always Open To Discuss Product</h1>
-
-                    <h1 class="text-md font-bold text-gray-800 mt-1">design work or partnerships</h1>
-
-                    <!-- form start  -->
+                    <!-- Form start -->
                     <div class="mt-5">
+                        <div class="flex flex-wrap max-w-screen-md">
+                            <p class="text-green-700 font-bold pt-2" th:text="${msg}"></p>
+                            <form class="w-full" th:action="@{/sendMail}" method="post">
+                                <div class="w-full mb-6 md:mb-0">
+                                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                                        Name
+                                    </label>
+                                    <input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                                           id="grid-first-name" name="name" type="text" placeholder="Name" required>
+                                </div>
 
-
-                        <div class=" flex flex-wrap max-w-screen-md">
-                        
-                            <form class="w-full">
-                                
-                                    <div class="w-full mb-6 md:mb-0">
-                                        <label
-                                            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-                                            for="grid-first-name">
-                                             Name
-                                        </label>
-                                        <input
-                                            class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                                            id="grid-first-name" type="text" placeholder="name">
-                                    </div>
-
-            
                                 <div class="flex flex-wrap -mx-3 mt-6 mb-6">
                                     <div class="w-full px-3">
-                                        <label
-                                            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-                                            for="grid-password">
+                                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-email">
                                             Email Address
                                         </label>
-                                        <input
-                                            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                                            id="grid-email" type="email" placeholder="********@*****.**">
+                                        <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                                               id="grid-email" type="email" name="email" placeholder="example@example.com" required>
                                     </div>
                                 </div>
 
                                 <div class="flex flex-wrap -mx-3 mb-6">
                                     <div class="w-full px-3">
-                                        <label
-                                            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-                                            for="grid-password">
+                                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-message">
                                             Your Message
                                         </label>
-                                        <textarea rows="10"
-                                            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
-
-                                       </textarea>
+                                        <textarea rows="10" name="message"
+                                                  class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                                                  placeholder="Write your message here..." required></textarea>
                                     </div>
                                     <div class="flex justify-center w-full mt-2 px-3">
-                                        <button
-                                            class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
-                                            type="submit">
+                                        <button class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded" type="submit">
                                             Send Message
                                         </button>
                                     </div>
-
                                 </div>
-
                             </form>
                         </div>
-                        <!-- // -->
-
-
-
                     </div>
-                    <!-- form end -->
-
+                    <!-- Form end -->
                 </div>
-
-
-                <!-- .................... -->
-
             </div>
         </div>
-
 
         <script>
             $(document).ready(() => {
@@ -117,9 +83,6 @@
                 $('#contact-links').addClass('active');
             });
         </script>
-
     </section>
-
 </body>
-
 </html>
