modify  in code to runs web app more smoothly and also some changes in mobile/small screen view

--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -16,7 +16,7 @@
 
     <section>
         <!-- Contact Section Start -->
-        <div class="Project-main px-10 pb-4">
+        <div class="Project-main px-4 lg:px-10 pb-4">
             <!-- Contact Heading Start -->
             <div class="Project_Head">
                 <div class="heading flex item-center">
