--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -17,7 +17,7 @@
     <section>
 
         <!-- Project Section Start -->
-        <div class="Project-main px-10 pb-4">
+        <div class="Project-main px-4 lg:px-10 pb-4">
 
             <!-- Resume Heading Start  -->
             <div class="Project_Head">
