--- a/src/main/resources/templates/Resume.html
+++ b/src/main/resources/templates/Resume.html
@@ -16,7 +16,7 @@
     <section>
 
         <!-- Resume Heading Start  -->
-        <div class="Resume_Head px-10">
+        <div class="Resume_Head px-4 lg:px-10">
 
             <div class="heading flex item-center">
                 <h1 class="text-2xl text-gray-900 font-semibold font-sans">Resume</h1>
@@ -26,7 +26,7 @@
         <!-- Resume Heading end -->
 
         <!-- Resume info start  -->
-        <div class="resume-info px-10 grid md:grid-cols-2 sm:grid-cols-1 gap-4 mt-3">
+        <div class="resume-info px-4 lg:px-10 grid md:grid-cols-2 sm:grid-cols-1 gap-4 mt-3">
 
 
             <!-- Education Section Start  -->
@@ -134,7 +134,7 @@
 
 
         <!-- Working Skills and Knowledge Start -->
-        <div class="Clinet bg-gray-50 mt-8 px-10 py-8 grid md:grid-cols-2 sm:grid-cols-1 gap-4 mt-3">
+        <div class="Clinet bg-gray-50 mt-8 px-4 lg:px-10 py-8 grid md:grid-cols-2 sm:grid-cols-1 gap-4 mt-3">
 
             <!-- Working Section Start  -->
 
