--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
   <section>
 
     <!-- About  -->
-    <div class="About_Head px-10">
+    <div class="About_Head px-4 lg:px-10">
 
       <div class="heading flex item-center">
         <h1 class="text-2xl text-gray-900 font-semibold font-sans">About</h1>
@@ -34,7 +34,7 @@
     <!-- About end -->
 
     <!-- What i do -->
-    <div class="what-ido px-10">
+    <div class="what-ido px-4 lg:px-10">
 
       <h1 class="text-lg font-bold font-sans text-gray-800 mt-3">What I Do!</h1>
 
