--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -27,13 +27,18 @@
 
         <div class="md:px-16 lg:px-32 pt-0 pb-5">
 
-            <div class="snow text-4xl text-pink-700 pt-12 pb-20 relative ml-4" onclick="func()"><i
-                    class="fa-regular fa-snowflake"></i></div>
+            <div class="snow text-4xl text-pink-700 pt-12 pb-20 relative ml-4"><i class="fa-regular fa-snowflake"></i>
+            </div>
 
-            <div class="bars text-4xl text-pink-700 pt-12 pb-8 relative ml-4 hidden" onclick="func()"><i
+            <!-- bars -->
+            <div class="bars text-4xl text-pink-700 pt-4 pb-4 relative ml-4" onclick="func()"><i
                     class="fa-solid fa-bars-staggered"></i></div>
 
-            <div class="profile lg:flex mt-16 space-x-4">
+            <!-- cross bar -->
+            <div class="cross_bars text-4xl text-pink-700 pt-4 pb-4 relative ml-4 hidden" onclick="func()"><i
+                    class="fa-solid fa-xmark"></i></div>
+
+            <div class="profile lg:flex mt-16 lg:space-x-4">
 
                 <!-- profile left side part  -->
                 <div
@@ -62,8 +67,7 @@
                         <a href="#"
                             class="text-blue-700 bg-gray-50 px-2 py-1 rounded hover:bg-pink-500 hover:text-white ease-in-out duration-400"><i
                                 class="fa-brands fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/md-majid-naseem-b8a579281"
-                            target="_blank"
+                        <a href="https://www.linkedin.com/in/md-majid-naseem-b8a579281" target="_blank"
                             class="text-blue-900 bg-gray-50 px-2 py-1 rounded hover:bg-pink-500 hover:text-white ease-in-out duration-400"><i
                                 class="fa-brands fa-linkedin-in"></i></a>
                         <a href="https://youtu.be/W65AIn1EItM" target="_blank"
@@ -145,12 +149,12 @@
                 </div>
 
                 <!-- profile right side detail part  -->
-                <div class="profile-details lg:lg:w-full">
+                <div class="profile-details lg:w-full">
 
                     <!-- Option start -->
-                    <div class="flex justify-end">
+                    <div class="flex lg:w-full justify-end">
                         <span
-                            class="inline-flex h-full text-center justify-center text-xs gap-x-2 bg-white py-2 px-2 rounded-xl">
+                            class="inline-flex flex-wrap h-full text-center justify-end text-xs gap-x-2 gap-y-2 bg-white py-2 px-2 rounded-xl">
 
                             <a th:href="@{/}" id="about-links"
                                 class="item flex items-center justify-center flex-col font-medium shrink bg-gray-100 w-16 h-16 text-gray-500 py-2 px-3 hover:bg-pink-400 hover:text-white rounded-lg ease-in-out duration-300">
@@ -186,7 +190,7 @@
                     </div>
                     <!-- Option start -->
 
-                    <div class="profile-details pt-8 pb-4 mt-2 bg-white rounded-2xl">
+                    <div class="profile-details pt-8 pb-2 mt-2 bg-white lg:rounded-2xl rounded-t-2xl ">
 
                         <div th:replace="${content}"></div>
 
@@ -216,27 +220,38 @@
         var isRight = true;
 
         function func() {
-
             // Get the profile-part element
             var profilePart = $('.profile-part');
 
             // Toggle the position
             if (isRight) {
-                // Move to the left
-                profilePart.removeClass('move-left').addClass('move-right');
-            } else {
                 // Move to the right
+                console.log('Moving to the right');
+                profilePart.removeClass('move-left').addClass('move-right');
+                $('.cross_bars').show();
+                $('.bars').hide();
+            } else {
+                // Move to the left
+                console.log('Moving to the left');
                 profilePart.removeClass('move-right').addClass('move-left');
+                $('.cross_bars').hide();
+                $('.bars').show();
             }
+
+            // Log the classes to ensure they are being applied
+            console.log(profilePart.attr('class'));
 
             // Toggle the state
             isRight = !isRight;
         }
 
         $(document).ready(function () {
-            // Any additional initialization code can go here
+            // Initial visibility setting
+            $('.cross_bars').hide();
+            $('.bars').show();
         });
     </script>
+
 
 
 </body>
